--- a/website/master.css
+++ b/website/master.css
@@ -21,7 +21,6 @@
   --quarternary-color-shade-1: #806515;
   --quarternary-color-shade-2: #554000;
   --light-grey: #EDEDED;
-  --light-smoke: #D3D3D3;
 }
 
 body {
@@ -31,10 +30,10 @@ body {
 }
 
 body svg {
-  background-color: var(--light-smoke);
+  background-color: var(--quarternary-color-tint-2);
   border-style: solid;
-  border-color: var(--primary-color-shade-1);
-  border-radius: 5px;
+  border-width: thin;
+  border-radius: 20px;
   margin-top: 80px;
 }
 
@@ -107,95 +106,18 @@ body svg {
   pointer-events:none;
 }*/
 
-.details{
+.details {
   color:white;
 }
 
-.menubar {
-  background-color: var(--primary-color);
-  overflow: hidden;
-  position: fixed;
-  width: 100%;
-  border-bottom: solid;
-  border-bottom-width: 3px;
-  border-bottom-color: var(--primary-color-shade-2);
-  z-index: 1;
-}
-
-.menubar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: thin;
-  letter-spacing: 2px;
-}
-
-.menubar a:hover {
-  background-color: var(--secondary-color);
-  color: white;
-}
-
-.selected {
-  background-color: var(--secondary-color-tint-2);
-  color: white;
-}
-
-.menubar .icon {
-  display: none;
-}
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the menubar (.icon) */
-@media screen and (max-width: 600px) {
-  .menubar a:not(.selected) {display: none;}
-  .menubar a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the menubar with JavaScript when the user clicks on the icon. This class makes the menubar look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .menubar.responsive {position: relative;}
-  .menubar.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .menubar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-h2 {
-  position: absolute;
-  left: 100px;
+h1 {
   font-family: Montserrat, sans-serif;
+  font-size: 50pt;
+  letter-spacing: -5px;
 }
 
-#titleTop {
-  top: 90px;
-}
-
-#titleMid {
-  top: 1180px;
-}
-
-#titleBot {
-  top: 2270px;
-}
-
-#textSVG {
-  padding: 50px;
-}
-
-text {
+p {
   font-family: Roboto, sans-serif;
+  font-size: 18pt;
+  margin: 40px;
 }
-
