--- a/co2/master.css
+++ b/co2/master.css
@@ -115,6 +115,7 @@ body svg {
   background-color: var(--primary-color);
   overflow: hidden;
   position: fixed;
+  top: 0px;
   width: 100%;
   border-bottom: solid;
   border-bottom-width: 3px;
