--- a/worldMaps/co2/master.css
+++ b/worldMaps/co2/master.css
@@ -56,7 +56,7 @@ body svg {
 }
 
 /* Creates a small triangle extender for the tooltip */
-.d3-tip:after {      
+.d3-tip:after {
   box-sizing: border-box;
   display: inline;
   font-size: 8px;
@@ -65,7 +65,7 @@ body svg {
   color: rgba(0, 0, 0, 0.6);
   position: absolute;
   pointer-events: none;
-  
+
 }
 
 /* Northward tooltips */
@@ -170,3 +170,41 @@ body svg {
     text-align: left;
   }
 }
+
+
+
+
+.ticks {
+      font-size: 10px;
+    }
+
+    .track,
+    .track-inset,
+    .track-overlay {
+      stroke-linecap: round;
+    }
+
+    .track {
+      stroke: #000;
+      stroke-opacity: 0.3;
+      stroke-width: 10px;
+    }
+
+    .track-inset {
+      stroke: #dcdcdc;
+      stroke-width: 8px;
+    }
+
+    .track-overlay {
+      pointer-events: stroke;
+      stroke-width: 50px;
+      stroke: transparent;
+      cursor: crosshair;
+    }
+
+    .handle {
+      fill: #fff;
+      stroke: #000;
+      stroke-opacity: 0.5;
+      stroke-width: 1.25px;
+    }
