--- a/src/tempVisual.css
+++ b/src/tempVisual.css
@@ -39,7 +39,28 @@ svg {
   .birthyear {
     fill: #fff;
   }
-  
+  .displayDiv  {
+    position: absolute;
+    bottom: 80px;
+    left: 230px;
+    padding: 40px;
+    background-color: var(--light-smoke);
+    border-radius: 2px;
+    border: solid;
+    border-color: var(--secondary-color);
+    border-radius: 5px;
+  }
+  .displayDivRight  {
+    position: absolute;
+    bottom: 80px;
+    right: 200px;
+    padding: 40px;
+    background-color: var(--light-smoke);
+    border-radius: 2px;
+    border: solid;
+    border-color: var(--secondary-color);
+    border-radius: 5px;
+  }
   rect {
     fill-opacity: .6;
     fill: #1f77b4;
@@ -115,16 +136,33 @@ svg {
     font: 10px sans-serif;
   }
   divs.tooltip {	
-      
-      position: absolute;			
-      text-align: center;			
-      width: 60px;					
-      height: 28px;					
-      padding: 2px;			
-      font-family:12px 'Roboto', sans-serif;
-	
-      background: lightsteelblue;	
-      border: 0px;		
-      border-radius: 8px;			
-      pointer-events: none;		
+    position: absolute;
+    color: var(--tertiary-color);
+    padding: 8px;
+    background-color: rgba(44, 53, 49, 0.8);
+    border-radius: 3px;
+    text-align: center;
+    width: 200px;
+    font-family: 'avenir next', sans-serif;
+    line-height: 25px; 		
+    height: 28px;					
+    pointer-events: none;		
+  }
+  #leftButt, #rightButt {
+    position: absolute;
+    left: 10px;
+    bottom: 13px;
+    font-family: 'Nunito', sans-serif;
+    letter-spacing: 1px;
+    color: var(--primary-color);
+    padding-right: 26px;
+    border-radius: 3px;
+    border: none;
+    color: white;
+    margin: 0;
+    padding: 0 12px;
+    width: 60px;
+    cursor: pointer;
+    height: 50px;
+    background-color: var(--secondary-color);
   }
