--- a/src/tempVisual.css
+++ b/src/tempVisual.css
@@ -43,7 +43,8 @@ svg {
     position: absolute;
     bottom: 80px;
     left: 230px;
-    padding: 40px;
+    width: 110px;
+    height: 80px;
     background-color: var(--light-smoke);
     border-radius: 2px;
     border: solid;
@@ -54,7 +55,9 @@ svg {
     position: absolute;
     bottom: 80px;
     right: 200px;
-    padding: 40px;
+    width: 110px;
+    height: 80px;
+    text-align: center;
     background-color: var(--light-smoke);
     border-radius: 2px;
     border: solid;
@@ -161,7 +164,7 @@ svg {
     color: white;
     margin: 0;
     padding: 0 12px;
-    width: 60px;
+    width: 90px;
     cursor: pointer;
     height: 50px;
     background-color: var(--secondary-color);
