Added totals for each contenint

--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -126,3 +126,8 @@ img {
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
 }
+
+#yearText {
+  font-size: 80px;
+  font-family: 'Roboto Slab', sans-serif;
+}
