--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -29,21 +29,14 @@
   cursor: pointer;
   height: 30px;
   background-color: var(--secondary-color);
-  position: inherit;
-  left: 20px;
-  top: 400px;
+  
 }
 
 #Submit:hover, #play-button:hover {
   background-color: var(--quarternary-color);
 }
 
-#instructions {
-  top: 0px;
-  width: 100px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-}
+
 
 h3 {
   font-family: 'Roboto', sans-serif;
@@ -84,8 +77,15 @@ h3 {
   font-family: 'Roboto Slab', sans-serif;
 }
 
-#areaButtons {
+#buttonsArea, #buttonsAreaTwo {
   width: 300px;
-  height: 50px;
-  top: 10px;
+  position: relative;
+  left: 50px;
+  top: -690px;
+  z-index: 2;
+}
+
+#buttonsAreaTwo {
+  left: 220px;
+  top: -820px;
 }
