--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -47,6 +47,15 @@ p {
 	margin-right: 300px;
 }
 
+
 body {
-	margin-bottom: 10px;
+  
+    margin-bottom: 10px;
+    
+  
+}
+
+text {
+    font: 10px sans-serif;
+    text-anchor: middle;
 }
