--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -17,11 +17,14 @@ p {
 
 #yeartxt {
     top:150px;
+    left: 20%;
+    z-index: 1;
 }
 #yearslider{
     width:60%;
     position:relative;
     top:50px;
+    
 }
 #selectFile{
     position:absolute;
