--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -1,5 +1,4 @@
 
-
 h1 {
     position:relative;
     top:50px;
@@ -14,8 +13,9 @@ p {
 }
 
 #yeartxt {
-    top:150px;
-    left: 20%;
+    position: relative;
+    top:170px;
+    left: -25%;
     z-index: 1;
 }
 #yearslider{
@@ -23,6 +23,11 @@ p {
     position:relative;
     top:50px;
     
+}
+#selectTxt{
+    position: relative;
+    top: 280px;
+    left: 60px;
 }
 #selectFile{
     position:absolute;
