--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -14,36 +14,42 @@ p {
 
 #yeartxt {
     position: relative;
-    top:170px;
-    left: -25%;
+    top:160px;
+    left: -400px;
     z-index: 1;
 }
 #yearslider{
     width:60%;
     position:relative;
-    top:50px;
-    
+    top:-20px;
+    left: 150px;
+    z-index: 1;
+    background: "black";
 }
 #searchText, #searchSubmit{
     position: relative;
-    top: 480px;
-    left: 10%;
+    top: 200px;
+    left: -1060px;
+    z-index: 1;
 }
 #searchErr{
-    position: absolute;
-    top: 690px;
-    right: 2%;
-    font-size: 13px;
+    position: relative;
+    top: 200px;
+    left: -600px;
+    font-size: 11px;
+    z-index: 1;
 }
 #selectTxt{
-    position: absolute;
-    top: 250px;
-    left: 5%;
+    position: relative;
+    top: 50px;
+    left: -600px;
+    z-index: 1;
 }
 #selectFile{
-    position:absolute;
-    top:300px;
-    left:60px;
+    position: relative;;
+    top:50px;
+    left:-600px;
+    z-index: 1;
 }
 #toolTip {
     position: absolute;			
@@ -61,7 +67,8 @@ p {
 
 #shortDescription {
 	margin-left: 300px;
-	margin-right: 300px;
+    margin-right: 300px;
+    z-index: 1;
 }
 
 
