--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -51,6 +51,28 @@ p {
     left:-600px;
     z-index: 1;
 }
+#burstTable{
+    position: absolute;
+    top:400px;
+    left: 1200px;
+    z-index: 1;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border-bottom: 1px solid #ddd;
+}
+thead {
+    display:table;
+    width: calc(100% - 17px);
+}
+
+tbody {
+  display:block;
+  max-height: 800px;
+  overflow: auto;
+}
+tr:hover {background-color: #f5f5f5;}
 #toolTip {
     position: absolute;			
     text-align: center;			
