--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -6,36 +6,13 @@
   margin: 0px;
 }
 
-#myVal {
-  top: 160px;
-  width: 100px;
-}
-
 #sources {
-    position: absolute;
-    bottom: -285px;
-    left: -590px;
-    width: 1500px;
-    font: 10px sans-serif;
-  }
-
-#Submit, #play-button, #plusFive, #plusTen, #minusFive, #minusTen {
-  font-family: 'Nunito', sans-serif;
-  letter-spacing: 1px;
-  border-radius: 3px;
-  border: none;
-  color: white;
-  width: 60px;
-  cursor: pointer;
-  height: 30px;
-  background-color: var(--secondary-color);
+  position: absolute;
+  bottom: -285px;
+  left: -590px;
+  width: 1500px;
+  font: 10px sans-serif;
 }
-
-#Submit:hover, #play-button:hover {
-  background-color: var(--quarternary-color);
-}
-
-
 
 h3 {
   font-family: 'Roboto', sans-serif;
@@ -64,27 +41,16 @@ h3 {
   line-height: 25px;
 }
 
-#description {
-  margin-left: 300px;
-  margin-right: 300px;
-  font-family: 'Nunito', sans-serif;
-  font-size: 18px;
-}
-
 #yearText {
   font-size: 80px;
   font-family: 'Roboto Slab', sans-serif;
 }
 
-#buttonsArea, #buttonsAreaTwo {
-  width: 300px;
-  position: relative;
-  left: 50px;
-  top: -690px;
-  z-index: 1;
+.buttonText, .topText {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
 }
 
-#buttonsAreaTwo {
-  left: 220px;
-  top: -820px;
+#sumText {
+  font-size: 16px;
 }
