--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -74,17 +74,17 @@ tbody {
 }
 tr:hover {background-color: #f5f5f5;}
 #toolTip {
-    position: absolute;			
-    text-align: center;			
-    width: 150px;					
-    height: 50px;					
-    padding: 2px;			
+    position: absolute;
+    text-align: center;
+    width: 150px;
+    height: 50px;
+    padding: 2px;
     font-family:12px 'Roboto', sans-serif;
-  
-    background: lightsteelblue;	
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;		
+
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
   }
 
 #shortDescription {
@@ -95,13 +95,27 @@ tr:hover {background-color: #f5f5f5;}
 
 
 body {
-  
     margin-bottom: 10px;
-    
-  
 }
 
 text {
     font: 10px sans-serif;
     text-anchor: middle;
+}
+
+
+#displayYear, #choroYear1, #choroYear2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 40pt;
+  letter-spacing: -2px;
+  z-index: 1;
+  margin: 0px;
+}
+#sum, #choroSum, #vs {
+  font-size: 25px;
+}
+
+#choroSumText, #choroSumText2, #topHeader, #botHeader {
+  font-size: 18px;
+  font-weight: bold;
 }
