--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -21,10 +21,15 @@ p {
 #yearslider{
     width:60%;
     position:relative;
-    top:100px;
-    left: 50px;
+    top:80px;
+    left: -100px;
     z-index: 1;
     background: "black";
+}
+#compare, #isolate {
+    position: relative;
+    top: 300px;
+    left: -180px;
 }
 #searchText, #searchSubmit{
     position: relative;
@@ -71,6 +76,7 @@ thead {
 tbody {
   display:block;
   max-height: 800px;
+  text-align: left;
   overflow: auto;
 }
 tr:hover {background-color: #f5f5f5;}
