--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -17,7 +17,18 @@ p {
     color: black;
     font-family: 'Nunito', sans-serif;
 }
-
+/* Story Text */
+div.storytxt {
+    position: relative;
+    top: 820px;
+    left: 210px;
+}
+div.storytxt p{
+    font-size: 18px;
+    text-align: left;
+    width: 850px;
+}
+/* CSS for Slider */
 #yeartxt {
     position: relative;
     top:190px;
@@ -32,6 +43,92 @@ p {
     z-index: 1;
     background: "black";
 }
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    margin: 13.8px 0;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -14px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #367ebd;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #2a6495;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #3071a9;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    height: 8.4px;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #3071a9;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #367ebd;
+  }
+/* CSS for Commparison */
 #compare, #isolate {
     display: inline-block;
     position: relative;
@@ -41,6 +138,7 @@ p {
     width: 50;
     font-size: 16px;
 }
+/* CSS for Search Bar */
 #searchSubmit{
     position: relative;
     width: 70px;
@@ -67,6 +165,7 @@ p {
     font-size: 11px;
     z-index: 1;
 }
+/* CSS for Drop Down to Select File */
 #selectTxt{
     position: relative;
     top: 70px;
@@ -80,6 +179,7 @@ p {
     left:-600px;
     z-index: 1;
 }
+/* CSS for Table next to visual */
 #burstTable{
     position: absolute;
     top:250px;
@@ -104,6 +204,7 @@ tbody {
   overflow: auto;
 }
 tr:hover {background-color: #f5f5f5;}
+
 #toolTip {
     position: absolute;
     text-align: center;
