--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -152,6 +152,7 @@ input[type=range] {
     width: 150px;
     height: 40px;
     background-color: lightcyan;
+    border: black;
     top: 250px;
     left: -646px;
     text-align: left;  
