--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -54,3 +54,46 @@ h3 {
 #sumText {
   font-size: 16px;
 }
+
+#co2Image {
+  background-image: url(CO2Duotone.jpg);
+}
+
+.duoImage {
+  height: 700px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  padding-top: 200px;
+}
+
+.initialText {
+  color: white;
+  line-height: 30px;
+}
+
+#imageText {
+  text-align: center;
+  padding: 20px;
+  background-color: #111111;
+  opacity: 0.5;
+  border-radius: 20px;
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.colorBar {
+  height: 200px;
+  padding-top: 50px;
+  background-color: #687864;
+  padding-left: 250px;
+  padding-right: 250px;
+}
+
+.white-text {
+  line-height: 30px;
+}
+
+#barTwo {
+  height: 350px;
+}
