--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1365,7 +1365,11 @@ body {
 }
 
 body svg {
-
+    background-color: var(--light-smoke);
+    border-style: solid;
+    border-color: var(--secondary-color);
+    border-radius: 5px;
+    margin-top: 80px;
 }
 
 .names {
