--- a/src/temperature/tempVisual.css
+++ b/src/temperature/tempVisual.css
@@ -119,9 +119,21 @@ input[type=number]::-webkit-outer-spin-button {
     border-color: var(--secondary-color);
     border-radius: 5px;
   }
+  .initialText {
+    color: #FFEAAA;
+  }
 
-
-
+  #imageText {
+    text-align: left;
+    padding: 20px;
+    background-color: #111111;
+    opacity: 0.5;
+    border-radius: 10px;
+    margin-left: 600px;
+    margin-right: 250px;
+    width: 600px;
+  }
+  
   rects {
     fill-opacity: .6;
     fill: #1f77b4;
