--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -64,20 +64,21 @@ h3 {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  padding-top: 200px;
+  padding-top: 180px;
+  background-size: cover;
 }
 
 .initialText {
-  color: white;
+  color: #F7F9FB;
   line-height: 30px;
+  font-family: 'Roboto', sans-serif;
 }
 
-#imageText {
+.imageText {
   text-align: center;
   padding: 20px;
-  background-color: #111111;
-  opacity: 0.5;
-  border-radius: 20px;
+  background-color: rgba(17, 17, 17, 0.5);
+  border-radius: 5px;
   margin-left: 250px;
   margin-right: 250px;
 }
@@ -86,14 +87,21 @@ h3 {
   height: 200px;
   padding-top: 50px;
   background-color: #687864;
-  padding-left: 250px;
-  padding-right: 250px;
 }
 
 .white-text {
   line-height: 30px;
+  font-family: 'Raleway', sans-serif;
+  color: #F7F9FB;
 }
 
 #barTwo {
-  height: 350px;
+  height: 270px;
+}
+
+#mainChart, #chart {
+  background-color: #F7F9FB;
+  border-width: 1px;
+  border-radius: 1px;
+  border-color: #687864;
 }
