--- a/src/temperature/tempVisual.css
+++ b/src/temperature/tempVisual.css
@@ -202,7 +202,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     position: absolute;
-    fill: darkblue;
+    fill: black;
     z-index: 1;
   }
   .texted2 {
