Implemented serach textbox for choropleths

--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -46,7 +46,7 @@ h3 {
   font-family: 'Roboto Slab', sans-serif;
 }
 
-.buttonText, .topText {
+.buttonText, .topText, {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
 }
