--- a/src/co2/co2ScatterPlot.css
+++ b/src/co2/co2ScatterPlot.css
@@ -59,6 +59,10 @@ h3 {
   background-image: url(CO2Duotone.jpg);
 }
 
+#co2Image2 {
+  background-image: url(/../img/oceanBG.jpg);
+}
+
 .duoImage {
   height: 700px;
   background-repeat: no-repeat;
@@ -71,7 +75,7 @@ h3 {
 .initialText {
   color: #F7F9FB;
   line-height: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .imageText {
@@ -84,7 +88,7 @@ h3 {
 }
 
 .colorBar {
-  height: 200px;
+  height: 260px;
   padding-top: 50px;
   background-color: #687864;
 }
@@ -96,7 +100,7 @@ h3 {
 }
 
 #barTwo {
-  height: 270px;
+  height: 310px;
 }
 
 #mainChart, #chart {
@@ -105,4 +109,11 @@ h3 {
   border-radius: 1px;
   border-color: #687864;
   padding-bottom: 50px;
+}
+
+.header, .headerBar {
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 1px;
+  font-weight: lighter;
 }
