--- a/src/core/master.css
+++ b/src/core/master.css
@@ -109,7 +109,7 @@ body svg {
 }
 
 .menubar {
-  background-color: var(--primary-color);
+  background-color: #000000;
   overflow: hidden;
   position: fixed;
   top: 0px;
@@ -311,3 +311,7 @@ text {
       stroke-opacity: 0.5;
       stroke-width: 1.25px;
     }
+
+#header {
+  background-color: #000000;
+}
