--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -233,3 +233,19 @@ tr:hover {background-color: #f5f5f5;}
 #energyImage {
     background-image: url(/../img/energyDuo.jpg);
 }
+
+#energyLogo {
+  max-width: 30%;
+}
+
+#header {
+  background-color: #3B444C;
+}
+
+a {
+  color: lightgrey;
+}
+
+a:hover {
+  color: white;
+}
