--- a/src/temperature/tempVisual.css
+++ b/src/temperature/tempVisual.css
@@ -373,7 +373,7 @@ background-color: var(--secondary-color);
 .colorBar {
   height: 260px;
   padding-top: 50px;
-  background-color: #687864;
+  background-color: #3B444C;
 }
 
 #tempImageTwo {
