--- a/src/debate/debate.css
+++ b/src/debate/debate.css
@@ -7,3 +7,37 @@
 	float: right;
 	width: 50%;
 }
+.colorBar {
+    height: 360px;
+    padding-top: 50px;
+    background-color: #3B444C;
+  }
+  .header, .headerBar {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    font-weight: lighter;
+  }
+  .duoImage {
+    height: 650px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    padding-top: 50px;
+    background-size: cover;
+  }    
+  
+.imageText {
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(17, 17, 17, 0.5);
+    border-radius: 5px;
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+  .initialText {
+    color: #F7F9FB;
+    line-height: 30px;
+    font-family: 'Raleway', sans-serif;
+  }
+    
